# python-databasin

./: .gitignore  .setup.py.swp  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  runtests.py  setup.py
.github/workflows/: python-publish.yml  python-tests.yml
databasin/: client.py  datasets.py  exceptions.py  jobs.py  uploads.py  utils.py
tests/: test_client.py  test_datasets.py  test_jobs.py  test_uploads.py  utils.py
