[tool.poetry]
name = "python-databasin"
version = "0.5.4"
description = ""
authors = ["Conservation Biology Institute"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "~2.7 || ^3.8"
python-dateutil = "^2.9.0.post0"
six = "^1.16.0"
requests = [
    { version = "^2.32.2", python = "^3.8" },
    { version = "^1.2.3", python = "~2.7" }
]
restle = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = [
    { version = "^8.2.1", python = "^3.8" },
    { version = "^4.6.11", python = "~2.7" }
]
requests-mock = ">=0.7.0"
mock = [
    { version = "^5.1.0", python = "^3.8" },
    { version = "^3.0.5", python = "~2.7" }
]
Django = ">=1.11.20,<1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
