[tool.poetry]
name = "python-databasin"
version = "0.6.1"
description = ""
authors = ["Conservation Biology Institute"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [
    { include = "databasin" }
]

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.9.0.post0"
six = "^1.16.0"
requests = "^2.32.2"
restle = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
requests-mock = ">=0.7.0"
mock = "^5.1.0"
Django = ">=1.11.20,<1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
